- Added support for overriding App#on_assert (Kevin Smith)
- Minor Rakefile updates, mostly Mac and MSWin (Sean Long)
- Added several missing methods in Window; changed others to better 
  match wx (Sean Long)
- Added Wx::default_coord, and minor cleanup of standard ids (Sean Long)
- Added globals: display_depth, display_size, get_display_size and 
  display_size_mm, get_display_size_mm (Sean Long)
- Added ScrollWinEvent class and sample (Alex Fenton and Joe Seeley)
- Exposed member variables in KeyEvent (Sean Long)
- Added Sash classes and sample, but they don't yet work perfectly, at 
    least under Linux (Alex Fenton)
- Added GenericDirCtrl class (Alex Fenton)
- Added Wizard support (Wizard, WizardEvent, WizardPage, WizardPageSimple)
    and a sample (Alex Fenton)
- Added NumberEntryDialog class (Sean Long)
- Added MiniFrame class, and etc/miniframe.rb sample (Alex Fenton)
- Added support for Window#get_text_extent (Sean Long)
- Added support for Wx::GetKeyState and KeyCode (Sean Long)
- Enabled SWIG option -fvirtual to reduce code size (Daniel F. Savarese)
- Enabled SWIG feature compactdefaultargs to reduce code size 
    (Daniel F. Savarese)

====0.0.32 tag included all of this:===
- Fix BoxSizer and StaticBoxSizer (Daniel F. Savarese and Roy Sutton)
    Added "virtual" where needed, and added some missing methods
- Get bigdemo ToolBar sample working (Roy Sutton)
- Get text/textctrl.rb sample working (Roy Sutton)
- Remove unneeded typemaps (Alex Fenton)
- Ignore redundant variations of methods like get_size and get_position,
    some constructors and cases of create, draw_lines, draw_polygon,
	  ListBox#set
- Ignore (temporarily?) methods that now give errors:
    get_text_extent, get_multi_line_text_extent
- Fix SWIG warnings by adding missing virtual destructor declarations
- Now include SWIG's ruby typemaps.i file (Alex Fenton)
- Reverted the wxWidget Assert catching that was just put in
  (It was causing hanging intead of terminating the app)